--- a/pg4.html
+++ b/pg4.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hypertext Story</title>
+    <title>The Beet</title>
   </head>
   <body>
   <p>
-    The beet is the murderer returned to the scene of the crime.<br><br>
-    The beet is what happens when the cherry finishes with the carrot.<br><br>
-    The beet is the ancient ancestor of the autumn moon, bearded, buried, all but fossilized;<br><br>
-    &nbsp;&nbsp;&nbsp;the dark green sails of the grounded moon-boat stitched with veins of primordial plasma;<br><br>
-    &nbsp;&nbsp;&nbsp;the kite string that once connected the moon to the Earth now a muddy whisker drilling desperately for <b><a href="https://www.rubyfalls.com/gallery" target="_blank">rubies</a></b>.<br>
+    The beet is the murderer returned to the scene of the crime.<br>
+    The beet is what happens when the cherry finishes with the carrot.<br>
+    The beet is the ancient ancestor of the autumn moon, bearded, buried, all but fossilized;<br>
+    the dark green sails of the grounded moon-boat stitched with veins of primordial plasma;<br>
+    the kite string that once connected the moon to the Earth now a muddy whisker drilling desperately for <b><a href="https://www.rubyfalls.com/gallery" target="_blank">rubies</a></b>.<br><br><br>
+    -- from Tom Robbin's Jitterbug Perfume
   </p>
   <img src="https://i.pinimg.com/474x/3c/9d/5d/3c9d5d940451a1aa089e50d72c0587ad.jpg"
   alt="the Earth holding the moon on a string like a balloon" width="250px">
