--- a/pg3.html
+++ b/pg3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hypertext Story</title>
+    <title>The Beet</title>
   </head>
   <body>
     <p>The beet is the most <i>intense</i> of </i><a href="pg2.html">vegetables</a>.</p>
