--- a/index.html
+++ b/index.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Beet</title>
-  </head>
-  <body>
-    <p>The beet is the most <i>intense</i> of </i><a href = "pg2.html">vegetables</a>.</p>
-    
-  </body>
+    <title>Hypertext Story</title>
+    <style>
+        body {
+            background-color: black;
+            font-size: 24px;
+        }
+
+        p {
+            color: white;
+            text-align: center;
+        }
+
+        img {
+            margin-top: 20%;
+            width: 15%;
+            height: auto;
+        }
+    </style>
+</head>
+
+<body>
+    <p>Explore the Moon Phases from Important Dates in My Life</p>
+    <!-- ALL IMAGES SOURCED THROUGH: Google Creative Commons licenses -->
+    <!-- born -->
+    <a href="page2.html"><img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Waning_Crescent_Moon%287Sep15%29.jpg/900px-Waning_Crescent_Moon%287Sep15%29.jpg?20180208031522"
+            alt="Wanning Crescent moon on a black background" /></a>
+
+    <!-- graduated high school -->
+    <a href="page3.html"><img
+            src="https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg"
+            alt="Waxing Gibbous moon on a black background" /></a>
+
+    <!-- moved to Montana -->
+    <a href="page4.html"><img
+            src="https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg"
+            alt="Waxing Gibbous moon on a black background" /></a>
+
+    <!-- moved to Bellingham -->
+    <a href="page5.html"><img
+        src="https://live.staticflickr.com/5620/20467105493_a24e6dbac2_b.jpg"
+        alt="Waning Gibbous moon on a black background" /></a>
+
+
+    <!-- graduated WCC & started WWU -->
+    <a href="page6.html"><img
+        src="https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg"
+        alt="Waxing Gibbous moon on a black background" /></a>
+
+    <!-- graduating WWU -->
+    <a href="page7.html"><img
+        src="https://live.staticflickr.com/5620/20467105493_a24e6dbac2_b.jpg"
+        alt="Waning Gibbous moon on a black background" /></a>
+
+</body>
+
 </html>
