--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@
             This Moon favors sharing what you have learned<br>
             (and are learning) with others.
             <br><br>
-            <b><a href="index.html"> -- Back to the Phase</a></b>
+            <b><a href="https://www.tarot.com/astrology/moon-phases"> -- More about the Phase</a></b>
             
         </p> 
 </body>
