--- a/page7.html
+++ b/page7.html
@@ -9,7 +9,7 @@
         body {
             background-color: black;
             font-size: 24px;
-            background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Waning_Crescent_Moon%287Sep15%29.jpg/900px-Waning_Crescent_Moon%287Sep15%29.jpg?20180208031522");
+            background-image: url("https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg");
             background-repeat: no-repeat;
             
         }
