--- a/page2.html
+++ b/page2.html
@@ -4,39 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Hypertext Story</title>
     <style>
-        body {
-            background-color: black;
-            font-size: 24px;
-            background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Waning_Crescent_Moon%287Sep15%29.jpg/900px-Waning_Crescent_Moon%287Sep15%29.jpg?20180208031522");
-            background-repeat: no-repeat;
-            
-        }
-        h1, h2, h3{
-            color: white;
-            text-align: right;
-        }
-        p {
-            color: white;
-            font-size: 18px;
-            text-align: right;
-            width: 40%;
-            margin-left: 60%;
-            line-height: 1.5;
-        }
-        a {
-            color: white;
-            text-decoration: none;
-            text-align: right;
-        }
-        img {
-            width: 50%;
-            height: auto;
-        }
+
     </style>
 </head>
-<body>
+<body id="Waning_Crescent">
+    <div class="text">
         <h1>
             December 31, 1991
         </h1>
@@ -59,6 +34,8 @@
             <br><br>
             <b><a href="page3.html"> -- Next Phase</a></b>
             
-        </p> 
+        </p>
+    </div>
+ 
 </body>
 </html>
