--- a/page7.html
+++ b/page7.html
@@ -5,36 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hypertext Story</title>
-    <style>
-        body {
-            background-color: black;
-            font-size: 24px;
-            background-image: url("https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg");
-            background-repeat: no-repeat;
-            
-        }
-        h1, h2, h3{
-            color: white;
-            text-align: right;
-        }
-        p {
-            color: white;
-            font-size: 18px;
-            text-align: right;
-            width: 40%;
-            margin-left: 60%;
-            line-height: 1.5;
-        }
-        a {
-            color: white;
-            text-decoration: none;
-            text-align: right;
-        }
-        img {
-            width: 50%;
-            height: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
         <h1>
