--- a/index.html
+++ b/index.html
@@ -4,58 +4,257 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <title>Hypertext Story</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>33 Moons</title>
     <style></style>
   </head>
 
-  <body id = "main">
+  <body id="main">
     <div id="wrapper">
-        <div class="banner">
-            <p class="banner-text">Explore the Moon Phases from Important Dates in My Life</p>
+      <div class="banner">
+        <div class="banner-text">
+          <h1>33 Moons</h1>
         </div>
-      <!-- ALL IMAGES SOURCED THROUGH: Google Creative Commons licenses -->
-      <!-- born -->
-      <a href="page2.html"
-        ><img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Waning_Crescent_Moon%287Sep15%29.jpg/900px-Waning_Crescent_Moon%287Sep15%29.jpg?20180208031522"
-          alt="Wanning Crescent moon on a black background"
-      /></a>
+      </div>
 
-      <!-- graduated high school -->
-      <a href="page3.html"
-        ><img
-          src="https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg"
-          alt="Waxing Gibbous moon on a black background"
-      /></a>
+      <!-- ALL IMAGES SOURCED THROUGH: https://www.webexhibits.org/calendars/moon.html -->
 
-      <!-- moved to Montana -->
-      <a href="page4.html"
-        ><img
-          src="https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg"
-          alt="Waxing Gibbous moon on a black background"
-      /></a>
+      <div id="moons">
+        <!-- 1991 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning3Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
 
-      <!-- moved to Bellingham -->
-      <a href="page5.html"
-        ><img
-          src="https://live.staticflickr.com/5620/20467105493_a24e6dbac2_b.jpg"
-          alt="Waning Gibbous moon on a black background"
-      /></a>
+        <!-- 1992 -->
+        <a href="WaxingCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing5Z.jpg"
+            alt="Waxing Crescent moon on a black background"
+        /></a>
 
-      <!-- graduated WCC & started WWU -->
-      <a href="page6.html"
-        ><img
-          src="https://live.staticflickr.com/5306/5837031188_94f31ab46e_b.jpg"
-          alt="Waxing Gibbous moon on a black background"
-      /></a>
+        <!-- 1993 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning12Z.jpg"
+            alt="Waning Gibbous moon on a black background"
+        /></a>
 
-      <!-- graduating WWU -->
-      <a href="page7.html"
-        ><img
-          src="https://live.staticflickr.com/5620/20467105493_a24e6dbac2_b.jpg"
-          alt="Waning Gibbous moon on a black background"
-      /></a>
+        <!-- 1994 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
+
+        <!-- 1995 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing9Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 1996 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning9Z.jpg"
+            alt="Waning Gibbous moon on a black background"
+        /></a>
+
+        <!-- 1997 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing1Z.jpg"
+            alt="Waning Gibbous moon on a black background"
+        /></a>
+
+        <!-- 1998 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 1999 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning4Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
+
+        <!-- 2000 -->
+        <a href="WaxingCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing3Z.jpg"
+            alt="Waxing Crescent moon on a black background"
+        /></a>
+
+        <!-- 2001 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+      </div>
+
+      <div id="moons">
+        <!-- 2002 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
+
+        <!-- 2003 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing7Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2004 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning11Z.jpg"
+            alt="Waning Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2005 -->
+        <a href="NewMoon.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/newZ.jpg"
+            alt="New moon (no moon) on a black background"
+        /></a>
+
+        <!-- 2006 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing11Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2007 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning7Z.jpg"
+            alt="Waning Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2008 -->
+        <a href="WaxingCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing2Z.jpg"
+            alt="Waxing Crescent moon on a black background"
+        /></a>
+
+        <!-- 2009 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2010 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning2Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
+
+        <!-- 2011 -->
+        <a href="WaxingCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing5Z.jpg"
+            alt="Waxing Crescent moon on a black background"
+        /></a>
+
+        <!-- 2012 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning12Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+      </div>
+      
+      <div id="moons">
+        <!-- 2013 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
+
+        <!-- 2014 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing10Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2015 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning9Z.jpg"
+            alt="Waning Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2016 -->
+        <a href="WaxingCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing1Z.jpg"
+            alt="Waxing Crescent moon on a black background"
+        /></a>
+
+        <!-- 2017 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2018 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning4Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
+
+        <!-- 2019 -->
+        <a href="WaxingCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing3Z.jpg"
+            alt="Waxing Crescent on a black background"
+        /></a>
+
+        <!-- 2020 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2021 -->
+        <a href="WaningCrescent.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+            alt="Waning Crescent moon on a black background"
+        /></a>
+
+        <!-- 2022 -->
+        <a href="WaxingGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing8Z.jpg"
+            alt="Waxing Gibbous moon on a black background"
+        /></a>
+
+        <!-- 2023 -->
+        <a href="WaningGibbous.html"
+          ><img
+            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning11Z.jpg"
+            alt="Waning Gibbous moon on a black background"
+        /></a>
+      </div>
     </div>
   </body>
 </html>
