--- a/WaningCrescent.html
+++ b/WaningCrescent.html
@@ -1,24 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Waning Crescent</title>
-    <style></style>
-  </head>
 
-  <body id="New_Moon">
-    <div id="wrapper">
-        <div class="banner">
-            <div class="banner-text">
-                <h1>Waning Crescent</h1>
-            </div>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Waning Crescent</title>
+  <style></style>
+</head>
+
+<body id="New_Moon">
+  <div id="wrapper">
+    <div class="banner">
+      <div class="banner-text">
+        <h1>Waning Crescent</h1>
+
+        <!-- information about moon phases found: https://thatverynight.com/moon-phases-meaning/ -->
+        
+        <h2>Science:</h2>
+        <p>
+          This is the moon’s last stop before it reenters the new moon period.
+        </p>
+        <h2>Symbolism:</h2>
+        <p>
+          Now is the time to surrender to whatever has happened that is out of
+          our control. We should practice compassion and self-care at this
+          time ahead of dusting ourselves off for the next cycle.
+        </p>
+      </div>
     </div>
-    <footer>
-        <a href="index.html" class="button">Back</a>
-    </footer>
-  </body>
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+      alt="1994: Waning Crescent moon on a black background: 10% illuminated" />
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning2Z.jpg"
+      alt="2010: Waning Crescent moon on a black background: 20% illuminated" />
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning3Z.jpg"
+      alt="1991: Waning Crescent moon on a black background: 30% illuminated"/>
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning4Z.jpg"
+      alt="1999: Waning Crescent moon on a black background: 40% illuminated" />
+  </div>
+  <footer>
+    <a href="index.html" class="button">Back</a>
+  </footer>
+</body>
+
 </html>
