--- a/WaningGibbous.html
+++ b/WaningGibbous.html
@@ -14,8 +14,36 @@
         <div class="banner">
             <div class="banner-text">
                 <h1>Waning Gibbous</h1>
+
+                <!-- information about moon phases found: https://thatverynight.com/moon-phases-meaning/ -->
+                
+                <h2>Science:</h2>
+                <p>
+                  As the sun begins to move once again behind the moon, a dark slither becomes apparent on the right side, reflecting the last quarter moon.
+                </p>
+                <h2>Symbolism:</h2>
+                <p>
+                  A period of evaluation, this is the ideal time to reflect on the events of the past few days, and readjust intentions for the rest of the month.
+                </p>
+              </div>
             </div>
-        </div>
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing9Z.jpg"
+              alt="Waning Gibbous moon on a black background: 60% Illuminated"
+            />
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing10Z.jpg"
+              alt="Waning Gibbous moon on a black background: 70% Illuminated"
+            />
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing11Z.jpg"
+              alt="Waning Gibbous moon on a black background: 80% Illuminated"
+            />
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+              alt="Waning Gibbous moon on a black background: 90% Illuminated"
+            />
+            
     </div>
     <footer>
         <a href="index.html" class="button">Back</a>
