--- a/WaxingCrescent.html
+++ b/WaxingCrescent.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Waxing Crescent</title>
-    <style></style>
-  </head>
 
-  <body id="New_Moon">
-    <div id="wrapper">
-        <div class="banner">
-            <div class="banner-text">
-                <h1>Waxing Crescent</h1>
-            </div>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Waxing Crescent</title>
+  <style></style>
+</head>
+
+<body id="New_Moon">
+  <div id="wrapper">
+    <div class="banner">
+      <div class="banner-text">
+        <h1>Waxing Crescent</h1>
+        <h2>Science:</h2>
+
+        <!-- information about moon phases found: https://thatverynight.com/moon-phases-meaning/ -->
+        
+        <p>
+          The waxing crescent is a crescent illuminated on the right side as the sun begins to move from behind the
+          moon.
+        </p>
+        <h2>Symbolism:</h2>
+        <p>
+          This is the rebuilding phase as the moon has rejuvenated and emerged again. This is the time to set
+          intentions, hopes, and desires for the coming month, as well as being the ideal time to work on
+          self-confidence and compassion.
+        </p>
+      </div>
     </div>
-    <footer>
-        <a href="index.html" class="button">Back</a>
-    </footer>
-  </body>
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing1Z.jpg"
+      alt="Waxing Crescent moon on a black background: 10% illuminated" />
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing2Z.jpg"
+      alt="Waxing Crescent moon on a black background: 20% illuminated" />
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing3Z.jpg"
+      alt="Waxing Crescent moon on a black background: 30% illuminated" />
+    <img src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing4Z.jpg"
+      alt="Waxing Crescent moon on a black background: 40% illuminated" />
+  </div>
+  </div>
+  </div>
+  <footer>
+    <a href="index.html" class="button">Back</a>
+  </footer>
+</body>
+
 </html>
