--- a/index.html
+++ b/index.html
@@ -21,239 +21,370 @@
 
       <div id="moons">
         <!-- 1991 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning3Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html">
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning3Z.jpg"
+              alt="1991: Waning Crescent moon on a black background"
+            />
+            <div class="year">1991</div>
+          </a>
+        </div>
 
         <!-- 1992 -->
-        <a href="WaxingCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing5Z.jpg"
-            alt="Waxing Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingCrescent.html">
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing5Z.jpg"
+              alt="1992: Waxing Crescent moon on a black background"
+            />
+            <div class="year">1992</div>
+          </a>
+        </div>
 
         <!-- 1993 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning12Z.jpg"
-            alt="Waning Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning12Z.jpg"
+              alt="1993: Waning Gibbous moon on a black background"
+            />
+            <div class="year">1993</div>
+          </a>
+        </div>
 
         <!-- 1994 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+              alt="1994: Waning Crescent moon on a black background"
+            />
+            <div class="year">1994</div>
+          </a>
+        </div>
 
         <!-- 1995 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing9Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing9Z.jpg"
+              alt="1995: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">1995</div>
+          </a>
+        </div>
 
         <!-- 1996 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning9Z.jpg"
-            alt="Waning Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning9Z.jpg"
+              alt="1996: Waning Gibbous moon on a black background"
+            />
+            <div class="year">1996</div>
+          </a>
+        </div>
 
         <!-- 1997 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing1Z.jpg"
-            alt="Waning Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing1Z.jpg"
+              alt="1997: Waning Gibbous moon on a black background"
+            />
+            <div class="year">1997</div>
+          </a>
+        </div>
 
         <!-- 1998 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+              alt="1998: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">1998</div>
+          </a>
+        </div>
 
         <!-- 1999 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning4Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning4Z.jpg"
+              alt="1999: Waning Crescent moon on a black background"
+            />
+            <div class="year">1999</div>
+          </a>
+        </div>
 
         <!-- 2000 -->
-        <a href="WaxingCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing3Z.jpg"
-            alt="Waxing Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing3Z.jpg"
+              alt="2000: Waxing Crescent moon on a black background"
+            />
+            <div class="year">2000</div>
+          </a>
+        </div>
 
         <!-- 2001 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+              alt="2001: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2001</div>
+          </a>
+        </div>
       </div>
 
       <div id="moons">
         <!-- 2002 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+              alt="2002: Waning Crescent moon on a black background"
+            />
+            <div class="year">2002</div>
+          </a>
+        </div>
 
         <!-- 2003 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing7Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing7Z.jpg"
+              alt="2003: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2003</div>
+          </a>
+        </div>
 
         <!-- 2004 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning11Z.jpg"
-            alt="Waning Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning11Z.jpg"
+              alt="2004: Waning Gibbous moon on a black background"
+            />
+            <div class="year">2004</div>
+          </a>
+        </div>
 
         <!-- 2005 -->
-        <a href="NewMoon.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/newZ.jpg"
-            alt="New moon (no moon) on a black background"
-        /></a>
+        <div class="container">
+          <a href="NewMoon.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/newZ.jpg"
+              alt="2005: New moon (no moon) on a black background"
+            />
+            <div class="year">2005</div>
+          </a>
+        </div>
 
         <!-- 2006 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing11Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing11Z.jpg"
+              alt="2006: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2006</div>
+          </a>
+        </div>
 
         <!-- 2007 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning7Z.jpg"
-            alt="Waning Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning7Z.jpg"
+              alt="2007: Waning Gibbous moon on a black background"
+            />
+            <div class="year">2007</div>
+          </a>
+        </div>
 
         <!-- 2008 -->
-        <a href="WaxingCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing2Z.jpg"
-            alt="Waxing Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing2Z.jpg"
+              alt="2008: Waxing Crescent moon on a black background"
+            />
+            <div class="year">2008</div>
+          </a>
+        </div>
 
         <!-- 2009 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+              alt="2009: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2009</div>
+          </a>
+        </div>
 
         <!-- 2010 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning2Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning2Z.jpg"
+              alt="2010: Waning Crescent moon on a black background"
+            />
+            <div class="year">2010</div>
+          </a>
+        </div>
 
         <!-- 2011 -->
-        <a href="WaxingCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing5Z.jpg"
-            alt="Waxing Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing5Z.jpg"
+              alt="2011: Waxing Crescent moon on a black background"
+            />
+            <div class="year">2011</div>
+          </a>
+        </div>
 
         <!-- 2012 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning12Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning12Z.jpg"
+              alt="2012: Waning Gibbous moon on a black background"
+            />
+            <div class="year">2012</div>
+          </a>
+        </div>
       </div>
-      
+
       <div id="moons">
         <!-- 2013 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+              alt="2013: Waning Crescent moon on a black background"
+            />
+            <div class="year">2013</div>
+          </a>
+        </div>
 
         <!-- 2014 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing10Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing10Z.jpg"
+              alt="2014: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2014</div>
+          </a>
+        </div>
 
         <!-- 2015 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning9Z.jpg"
-            alt="Waning Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning9Z.jpg"
+              alt="2015: Waning Gibbous moon on a black background"
+            />
+            <div class="year">2015</div>
+          </a>
+        </div>
 
         <!-- 2016 -->
-        <a href="WaxingCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing1Z.jpg"
-            alt="Waxing Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing1Z.jpg"
+              alt="2016: Waxing Crescent moon on a black background"
+            />
+            <div class="year">2016</div>
+          </a>
+        </div>
 
         <!-- 2017 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+              alt="2017: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2017</div>
+          </a>
+        </div>
 
         <!-- 2018 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning4Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning4Z.jpg"
+              alt="2018: Waning Crescent moon on a black background"
+            />
+            <div class="year">2018</div>
+          </a>
+        </div>
 
         <!-- 2019 -->
-        <a href="WaxingCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing3Z.jpg"
-            alt="Waxing Crescent on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing3Z.jpg"
+              alt="2019: Waxing Crescent on a black background"
+            />
+            <div class="year">2019</div>
+          </a>
+        </div>
 
         <!-- 2020 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing12Z.jpg"
+              alt="2020: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2020</div>
+          </a>
+        </div>
 
         <!-- 2021 -->
-        <a href="WaningCrescent.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
-            alt="Waning Crescent moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningCrescent.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning1Z.jpg"
+              alt="2021: Waning Crescent moon on a black background"
+            />
+            <div class="year">2021</div>
+          </a>
+        </div>
 
         <!-- 2022 -->
-        <a href="WaxingGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing8Z.jpg"
-            alt="Waxing Gibbous moon on a black background"
-        /></a>
-
+        <div class="container">
+          <a href="WaxingGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waxing8Z.jpg"
+              alt="2022: Waxing Gibbous moon on a black background"
+            />
+            <div class="year">2022</div>
+          </a>
+        </div>
         <!-- 2023 -->
-        <a href="WaningGibbous.html"
-          ><img
-            src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning11Z.jpg"
-            alt="Waning Gibbous moon on a black background"
-        /></a>
+        <div class="container">
+          <a href="WaningGibbous.html"
+            ><img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning11Z.jpg"
+              alt="2023: Waning Gibbous moon on a black background"
+            />
+            <div class="year">2023</div>
+          </a>
+        </div>
       </div>
     </div>
   </body>
