looking for images

--- a/A2/proposal.html
+++ b/A2/proposal.html
@@ -50,7 +50,7 @@ including a nav at the top of the page, and I moved most of the styling to a sep
     <article>
       <div id="sec_overview">
         <figure id="opener">
-          <img src="images/Image1.gif" alt="A circles and arrows diagram relating concepts discussed in the paper">
+          <img src="../images/Image1.gif" alt="A circles and arrows diagram relating concepts discussed in the paper">
         </figure>
 
         <div class="text">
@@ -623,7 +623,7 @@ including a nav at the top of the page, and I moved most of the styling to a sep
       </div>
 
       <figure>
-        <img src="images/Image2.gif" alt="browser runs on many platforms">
+        <img src="../images/Image2.gif" alt="browser runs on many platforms">
 
         <figcaption>Fig 2. A client/server model for a distributed hypertext
           system.</figcaption>
@@ -652,7 +652,7 @@ including a nav at the top of the page, and I moved most of the styling to a sep
 
 
     <figure>
-      <img src="images/Image3.gif" alt="path between the database, the server and the browser">
+      <img src="../images/Image3.gif" alt="path between the database, the server and the browser">
       <figcaption>Fig 3. A hypertext gateway allows existing data<br>to be seen in hypertext
         form by a hypertext browser.</figcaption>
     </figure>
