Uploading the correct files

--- a/A1/NewMoon.html
+++ b/A1/NewMoon.html
@@ -11,15 +11,36 @@
 
   <body id="New_Moon">
     <div id="wrapper">
-        <div class="banner">
-            <div class="banner-text">
-                <h1>New Moon</h1>
-            </div>
+      <div class="banner">
+        <div class="banner-text">
+          <h1>New Moon</h1>
+
+          <!-- information about moon phases found: https://thatverynight.com/moon-phases-meaning/ -->
+
+          <h2>Science:</h2>
+          <p>
+            The new moon is not visible because the sun and moon are on the same
+            side of the Earth. At this stage, we are faced by ‘the dark side of
+            the moon'.
+          </p>
+          <h2>Symbolism:</h2>
+          <p>
+            The new moon is considered a time for fresh starts and rejuvenation,
+            with women, especially, needing to regain their strength after the
+            monthly cycle. This is the time for setting new intentions and
+            putting the past behind you.
+          </p>
         </div>
-        
+      </div>
+      <div class="feature">
+        <!-- GIF FROM: https://spaceplace.nasa.gov/moon-phases/en/ -->
+        <img
+          src="https://spaceplace.nasa.gov/review/moon-phases/moon-phases.en.gif"
+          alt="Rotation through the phases of the moon">
+      </div>
     </div>
     <footer>
-        <a href="index.html" class="button">Back</a>
+      <a href="index.html" class="button">Back</a>
     </footer>
   </body>
 </html>
