--- a/A1/WaxingGibbous.html
+++ b/A1/WaxingGibbous.html
@@ -8,14 +8,40 @@
     <title>Waxing Gibbous</title>
     <style></style>
   </head>
-
   <body id="New_Moon">
     <div id="wrapper">
         <div class="banner">
             <div class="banner-text">
                 <h1>Waxing Gibbous</h1>
+
+                <!-- information about moon phases found: https://thatverynight.com/moon-phases-meaning/ -->
+
+                <h2>Science:</h2>
+                <p>
+                  One step away from a full moon, the waxing gibbous leaves a tiny slither of the moon’s surface in darkness. This moon can be easily seen during the day.
+                </p>
+                <h2>Symbolism:</h2>
+                <p>
+                  As we enter the full moon phase, this last stop is a time to adjust, refine, and edit intentions in the face of the challenges from the first quarter.
+                </p>
+              </div>
             </div>
-        </div>
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning9Z.jpg"
+              alt="Waning Gibbous moon on a black background: 60% Illuminated"
+            />
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning10Z.jpg"
+              alt="Waning Gibbous moon on a black background: 70% Illuminated"
+            />
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning11Z.jpg"
+              alt="Waning Gibbous moon on a black background: 80% Illuminated"
+            />
+            <img
+              src="https://www.webexhibits.org/calendars/imagesFolder/moonphase/waning12Z.jpg"
+              alt="Waning Gibbous moon on a black background: 90% Illuminated"
+            />
     </div>
     <footer>
         <a href="index.html" class="button">Back</a>
