--- a/A3/painting.html
+++ b/A3/painting.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://kit.fontawesome.com/8f3fbbdd15.js" crossorigin="anonymous"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Reproduced Painting</title>
 </head>
 <body>
     <h1>Reproduced Counter Composition XIII<br>by Theo Van Doesburg (1929)</h1><br>
+    
         <div class="container">
             <div id="t1"></div>
 
@@ -24,7 +30,11 @@
 
         </div>
 
-
+        <div id = "icon">
+            <a href="animation.html">
+                <i class="fa-solid fa-angles-right fa-2xl" style="color: #ca9e42;"></i>
+            </a>
+        </div>
 
 </body>
 </html>
