--- a/A4/index.html
+++ b/A4/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transitions</title>
     <script src="p5.js" type="text/javascript"></script>
-
     <script src="p5.dom.js" type="text/javascript"></script>
     <script src="path/to/p5.sound.js"></script>
     <script src="sketch.js"></script>
 </head>
 <body>
     <style> body {padding: 10px; margin: 10px; background-color: black;} </style>
-    <audio autoplay preload loop src="Treefingers.mp3" type="audio/mpeg"> </audio>
+    <audio autoplay preload loop src="../audio/Treefingers.mp3" type="audio/mpeg"> </audio>
 </body>
 </html>
