--- a/A4/index.html
+++ b/A4/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <style> body {padding: 10px; margin: 10px; background-color: black;} </style>
-    <audio autoplay preload loop src="../audio/Treefingers.mp3" type="audio/mpeg"> </audio>
+        <audio autoplay loop id="myAudio">
+            <source src="./audio/Treefingers.mp3" type="audio/mpeg">
+        </audio>
 </body>
 </html>
