--- a/A4/index.html
+++ b/A4/index.html
@@ -13,7 +13,7 @@
 <body>
     <style> body {padding: 10px; margin: 10px; background-color: black;} </style>
         <audio controls autoplay loop id="myAudio">
-            <source src=url("https://ia804609.us.archive.org/19/items/radiohead-discography_202112/2000%20-%20Radiohead%20-%20Kid%20A/05%20-%20Treefingers.mp3") type="audio/mpeg">
+            <source src="Treefingers.mp3" type="audio/mpeg">
         </audio>
 </body>
 </html>
