--- a/A4/index.html
+++ b/A4/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <style> body {padding: 10px; margin: 10px; background-color: black;} </style>
-        <audio controls autoplay loop id="myAudio">
+        <audio autoplay loop id="myAudio">
             <source src="Treefingers.mp3" type="audio/mpeg">
         </audio>
 </body>
