added play button

--- a/A4/index.html
+++ b/A4/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transitions</title>
     <script src="p5.js" type="text/javascript"></script>
-
+    <script src="https://kit.fontawesome.com/8f3fbbdd15.js" crossorigin="anonymous"></script>
     <script src="p5.dom.js" type="text/javascript"></script>
     <script src="path/to/p5.sound.js"></script>
     <script src="sketch.js"></script>
 </head>
 <body>
-    <style> body {color: 'white'; padding: 10px; margin: 10px; background-color: black;} </style>
+    <style> 
+        body {color: 'white'; padding: 10px; margin: 10px; background-color: black;}
+    </style>
     <audio autoplay="autoplay" loop="loop" id="myAudio">
         <source src="./audio/Treefingers.mp3" type="audio/mpeg">
-        
     </audio>
+    <i id="icon" class="fa-solid fa-play fa-beat-fade fa-2xl" style="color: #ffffff; position: absolute; top: 450px; left: 800px;" onclick="disappear()"></i>
 </body>
 </html>
