--- a/A4/index.html
+++ b/A4/index.html
@@ -15,8 +15,8 @@
     <style> 
         body {color: 'white'; padding: 10px; margin: 10px; background-color: black;}
     </style>
-    <audio autoplay="autoplay" loop="loop" id="myAudio">
-        <source src="./audio/Treefingers.mp3" type="audio/mpeg">
+    <audio autoplay loop preload="auto" id="myAudio">
+        <source src="Treefingers.mp3" type="audio/mpeg">
     </audio>
     <i id="icon" class="fa-solid fa-play fa-beat-fade fa-2xl" style="color: #ffffff; position: absolute; top: 450px; left: 800px;" onclick="disappear()"></i>
 </body>
