--- a/A5/index.html
+++ b/A5/index.html
@@ -2,12 +2,21 @@
 <head>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="getData.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/8f3fbbdd15.js" crossorigin="anonymous"></script>
+
 
 <body>
  <div id = "info"></div>
- <p>Cameras <span id = "camera"></span> in space:</p> 
- <ul id = "cameraID"></ul>
- <ul id = "name"></ul>
- <div id = "img-container"></div>
-</body>
+ <h1>Randomized Astronomy Picture of the Day</h1>
 
+ <ul id = "title"></ul>
+ <ul id = "date"></ul>
+ 
+ <div id = "img-container"></div>
+ <ul id = "explanation"></ul>
+
+ <a href="https://apod.nasa.gov/apod/archivepix.html">
+    <h3>Astronomy Picture of the Day Archive
+    <i id = "next" class="fa-solid fa-angles-right fa-3" style="color: white"></i></h3></a>
+</body>
