--- a/A5/index.html
+++ b/A5/index.html
@@ -8,15 +8,19 @@
 
 <body>
  <div id = "info"></div>
- <h1>Randomized Astronomy Picture of the Day</h1>
+ <h1 id = "title"></h1>
 
- <ul id = "title"></ul>
- <ul id = "date"></ul>
+ <div id="feature">
+    <div id = "img-container"></div>
+    <div id = "info">
+        <div id = "date"></div>
+        <div id = "explanation"></div>
+        <a href="https://apod.nasa.gov/apod/archivepix.html">
+            <h3>NASA Astronomy Picture of the Day Archive
+            <i id = "next" class="fa-solid fa-angles-right fa-3" style="color: white"></i></h3></a>
+    </div>
+ </div>
  
- <div id = "img-container"></div>
- <ul id = "explanation"></ul>
 
- <a href="https://apod.nasa.gov/apod/archivepix.html">
-    <h3>Astronomy Picture of the Day Archive
-    <i id = "next" class="fa-solid fa-angles-right fa-3" style="color: white"></i></h3></a>
+
 </body>
