--- a/A5/index.html
+++ b/A5/index.html
@@ -7,7 +7,6 @@
 
 
 <body>
- <div id = "info"></div>
  <h1 id = "title"></h1>
 
  <div id="feature">
@@ -15,12 +14,13 @@
     <div id = "info">
         <div id = "date"></div>
         <div id = "explanation"></div>
-        <a href="https://apod.nasa.gov/apod/archivepix.html">
-            <h3>NASA Astronomy Picture of the Day Archive
-            <i id = "next" class="fa-solid fa-angles-right fa-3" style="color: white"></i></h3></a>
+        <div id="archive">
+            <a href="https://apod.nasa.gov/apod/archivepix.html">
+                <h3>NASA Astronomy Picture of the Day Archive
+                <i id = "next" class="fa-solid fa-angles-right fa-3" style="color: white"></i></h3></a>
+        </div>
+
     </div>
  </div>
- 
-
 
 </body>
