--- a/A6/index.html
+++ b/A6/index.html
@@ -1,7 +1,7 @@
 <HTML>
 
 <HEAD>
-  <TITLE>Eliza (elizabot.js)</TITLE>
+  <TITLE>Eliza Purrington</TITLE>
   <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="elizabot.js"></SCRIPT>
   <SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="elizadata.js"></SCRIPT>
   <link rel="stylesheet" href="style.css">
