--- a/A7/index.html
+++ b/A7/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -42,18 +43,18 @@
             <div class="text-center my-4">
                 <div id="questionContent" style="display: none;">
                     <p>In a world of assignments, they keep you on track,</p>
-                    <p>Their number of challenges, you must keep track.</p><br>
+                    <p>Their number of challenges, you must keep track.</p><br><br>
                     <p>Subtract them by the days on this grand journey,</p>
                     <p>To find the hidden answer, mystical and free.</p><br>
                     <p>Now, subtract the wisdom of trees, serene and bright,</p>
-                    <p>From the result, bring forth your insight.</p><br>
+                    <p>From the result, bring forth your insight.</p><br><br>
                     <p>Can you solve this riddle, clever and keen?</p>
-                    <p>And uncover the answer, as yet unseen?</p><br>
+                    <p>And uncover the answer, as yet unseen?</p><br><br>
                     <p>Take your time, let your thoughts unfurl,</p>
                     <p>And when you're ready, share the answer with all your will.</p><br>
                     <form id="questionForm">
                         <div class="mb-3">
-                            <label for="answerInput" class="form-label">Enter your answer:</label>
+                            <label for="answerInput" class="form-label"></label>
                             <input type="number" id="answerInput" min="0" required>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
@@ -72,18 +73,18 @@
         <div class="text-center my-4">
             <div id="question2Content" style="display: none;">
                 <p>In the realm of numbers, a mystery unfolds,</p>
-                <p>A riddle of complexity, as it beholds.</p><br>
+                <p>A riddle of complexity, as it beholds.</p><br><br>
                 <p>Start with the stairs, each step that you've scaled,</p>
-                <p>Subtract the previous answer, a secret unveiled.</p><br>
+                <p>Subtract the previous answer, a secret unveiled.</p><br><br>
                 <p>From this result, subtract the day of the month,</p>
-                <p>But hold your breath, there's more to confront.</p><br>
+                <p>But hold your breath, there's more to confront.</p><br><br>
                 <p>Add the starting hour, a subtle twist,</p>
-                <p>Now, with cunning and wit, solve this bit,</p><br>
+                <p>Now, with cunning and wit, solve this bit,</p><br><br>
                 <p>Reveal the elusive number that quietly stays.</p>
 
                 <form id="question2Form">
                     <div class="mb-3">
-                        <label for="answerInput" class="form-label">Enter your answer:</label>
+                        <label for="answerInput" class="form-label"></label>
                         <input type="number" id="answerInput" min="0" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
