new riddles no progress bar

--- a/A7/index.html
+++ b/A7/index.html
@@ -42,16 +42,15 @@
         <section id="question">
             <div class="text-center my-4">
                 <div id="questionContent" style="display: none;">
-                    <p>In a world of assignments, they keep you on track,</p>
-                    <p>Their number of challenges, you must keep track.</p><br><br>
-                    <p>Subtract them by the days on this grand journey,</p>
-                    <p>To find the hidden answer, mystical and free.</p><br>
-                    <p>Now, subtract the wisdom of trees, serene and bright,</p>
-                    <p>From the result, bring forth your insight.</p><br><br>
+                    <p>In a realm of knowledge, where challenges lie,</p>
+                    <p>How many weeks make up the cycle, let your mind apply?</p><br><br>
+                    <p>Subtract the burden of tasks, the assignments in sight,</p>
+                    <p>And add the wisdom of trees, an insight shining bright.</p><br><br>
                     <p>Can you solve this riddle, clever and keen?</p>
-                    <p>And uncover the answer, as yet unseen?</p><br><br>
+                    <p>Uncover the answer, as yet unseen?</p><br><br>
                     <p>Take your time, let your thoughts unfurl,</p>
-                    <p>And when you're ready, share the answer with all your will.</p><br>
+                    <p>Name the solution, a true prize in this world.</p><br>
+                    <p id="hint" style="display: none;">12 - 7 + 9</p>
                     <form id="questionForm">
                         <div class="mb-3">
                             <label for="answerInput" class="form-label"></label>
@@ -73,14 +72,18 @@
         <div class="text-center my-4">
             <div id="question2Content" style="display: none;">
                 <p>In the realm of numbers, a mystery unfolds,</p>
-                <p>A riddle of complexity, as it beholds.</p><br><br>
-                <p>Start with the stairs, each step that you've scaled,</p>
-                <p>Subtract the previous answer, a secret unveiled.</p><br><br>
-                <p>From this result, subtract the day of the month,</p>
-                <p>But hold your breath, there's more to confront.</p><br><br>
-                <p>Add the starting hour, a subtle twist,</p>
-                <p>Now, with cunning and wit, solve this bit,</p><br><br>
-                <p>Reveal the elusive number that quietly stays.</p>
+                <p>A riddle of numbers, perplexing and bold.</p><br><br>
+                <p>Count the stairs, each step that you've taken,</p>
+                <p>Subtract the previous answer, secrets awaken.</p><br><br>
+                <p>From this new result, subtract the day's date,</p>
+                <p>But wait, there's more to calculate.</p><br><br>
+                <p>Add the starting hour, a twist to the quest,</p>
+                <p>With cunning and wit, give it your best.</p><br><br>
+                <p>Unveil the number hidden in the haze,</p>
+                <p>Let your mind wander, let it amaze.</p><br>
+                <p id="hint2" style="display: none;">(25 - previous) - date + 10</p>
+
+
 
                 <form id="question2Form">
                     <div class="mb-3">
@@ -101,12 +104,20 @@
 
     <section id="finish" style="display: none;">
         <div class="text-center my-4">
-            <h1>Congratulations, Survivor!</h1>
-            <p>You have overcome every challenge with your wit and determination.
-                Now, it's time to compare your journey with your fellow competitors.
-                Reach out to them and see who completed the challenge in the best time.
-                Remember, in the world of survivors, victory is shared and celebrated together.
-                Stay hungry, stay fierce, and embrace the next journey that lies ahead.</p>
+            <p>You've faced your challenges, strong and tough,</p>
+            <p>With your skills and might, you've had enough.</p>
+            <p>In this world of fighters, you've stood tall,</p>
+            <p>Outwitting, outlasting, outplaying them all.</p><br>
+
+            <p>As you reflect on the puzzles you've won,</p>
+            <p>Celebrate your triumphs, and all that you've done.</p>
+            <p>Stay hungry for more, for adventures abound,</p>
+            <p>Greatness seeks, where legends are found.</p><br>
+
+            <p>Congratulations, Survivors, on your grand quest,</p>
+            <p>Your achievements shine, as you stand abreast.</p>
+            <p>With heads held high, embrace challenges anew,</p>
+            <p>The spirit of competition, forever with you.</p>
         </div>
     </section>
 
