--- a/A7/index.html
+++ b/A7/index.html
@@ -42,14 +42,16 @@
         <section id="question">
             <div class="text-center my-4">
                 <div id="questionContent" style="display: none;">
-                    <p>In a realm of knowledge, where challenges lie,</p>
-                    <p>How many weeks make up the cycle, let your mind apply?</p><br><br>
-                    <p>Subtract the burden of tasks, the assignments in sight,</p>
-                    <p>And add the wisdom of trees, an insight shining bright.</p><br><br>
-                    <p>Can you solve this riddle, clever and keen?</p>
-                    <p>Uncover the answer, as yet unseen?</p><br><br>
-                    <p>Take your time, let your thoughts unfurl,</p>
-                    <p>Name the solution, a true prize in this world.</p><br>
+                    <p>In a realm of numbers, let's embark on this quest,</p>
+                    <p>Where mysteries unfold and challenges manifest.</p><br><br>
+                    <p>Begin with the weeks, quarters in a stride,</p>
+                    <p>How many are there? Let your knowledge provide.</p><br><br>
+                    <p>Next, take note of the assignments, completed thus far,</p>
+                    <p>Subtract their count, like removing a scar.</p><br><br>
+                    <p>Now, turn your gaze to the rigth, where trees stand tall,</p>
+                    <p>Count their number, for it holds a clue for all.</p><br>
+                    <p>Subtract this tally, with careful percision,</p>
+                    <p>Revealing the answer, your ultimate mission.</p><br>
                     <p id="hint" style="display: none;">12 - 7 + 9</p>
                     <form id="questionForm">
                         <div class="mb-3">
