--- a/final/pacman.html
+++ b/final/pacman.html
@@ -8,9 +8,12 @@
     <title>Pac-Man</title>
 </head>
 <body>
+    <div id="scoreBoard">
+      </div>
     <button id="startButton">Start Game</button>
     <canvas id="gameCanvas" width="700" height="800"></canvas>
     <button id="backButton" onclick="goToArcadeInterface()">Go Back</button>
+    <div id="levelElement" class="level-text"></div>
 
     <script src="pacman.js"></script>
 </body>
